[gd_scene load_steps=11 format=4 uid="uid://c0pnd4kglv4lw"]

[ext_resource type="Script" path="res://src/scenes/map.gd" id="1_bvsfh"]
[ext_resource type="Texture2D" uid="uid://csuejgf60xepc" path="res://assets/graphics/wee_dungeon.png" id="2_oymkj"]
[ext_resource type="PackedScene" uid="uid://cv15646v5pvrc" path="res://src/scenes/hero_unit.tscn" id="3_47ey8"]
[ext_resource type="Script" path="res://src/scripts/unit_manager.gd" id="5_qtcyx"]
[ext_resource type="Script" path="res://src/scripts/turn_manager.gd" id="5_wfjc2"]
[ext_resource type="Script" path="res://src/scenes/game_ui.gd" id="6_60aa2"]
[ext_resource type="Script" path="res://src/scripts/combat_manager.gd" id="7_vew2o"]
[ext_resource type="Script" path="res://src/scripts/animation_manager.gd" id="8_86v2v"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i4pu1"]
texture = ExtResource("2_oymkj")
texture_region_size = Vector2i(10, 10)
1:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
1:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:3/0 = 0
9:3/0 = 0
1:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
9:5/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
9:7/0 = 0
1:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
9:9/0 = 0
1:11/0 = 0
3:11/0 = 0
5:11/0 = 0
7:11/0 = 0
9:11/0 = 0
1:13/0 = 0
3:13/0 = 0
5:13/0 = 0
7:13/0 = 0
9:13/0 = 0
1:15/0 = 0
3:15/0 = 0
5:15/0 = 0
7:15/0 = 0
9:15/0 = 0
1:17/0 = 0
3:17/0 = 0
5:17/0 = 0
7:17/0 = 0
9:17/0 = 0
1:19/0 = 0
3:19/0 = 0
5:19/0 = 0
7:19/0 = 0
9:19/0 = 0
1:21/0 = 0
3:21/0 = 0
5:21/0 = 0
7:21/0 = 0
9:21/0 = 0

[sub_resource type="TileSet" id="TileSet_bu75t"]
tile_size = Vector2i(10, 10)
sources/1 = SubResource("TileSetAtlasSource_i4pu1")

[node name="Map" type="Node2D"]
script = ExtResource("1_bvsfh")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAABAAAAAQABAAEAAAACAAAAAQABAAEAAAADAAAAAQABAAEAAAAEAAAAAQABAAEAAAAFAAAAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAEAAAA=")
tile_set = SubResource("TileSet_bu75t")

[node name="HeroUnit" parent="." instance=ExtResource("3_47ey8")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(55, 95)

[node name="UnitManager" type="Node" parent="."]
script = ExtResource("5_qtcyx")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("5_wfjc2")

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("7_vew2o")

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("6_60aa2")

[node name="TurnInfo" type="Control" parent="GameUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TurnLabel" type="Label" parent="GameUI/TurnInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="PhaseLabel" type="Label" parent="GameUI/TurnInfo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="UnitInfoPanel" type="Panel" parent="GameUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="UnitNameLabel" type="Label" parent="GameUI/UnitInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="UnitClassLabel" type="Label" parent="GameUI/UnitInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="HPLabel" type="Label" parent="GameUI/UnitInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="APLabel" type="Label" parent="GameUI/UnitInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 5.0

[node name="EndTurnButton" type="Button" parent="GameUI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = -15.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
text = "End Turn"

[node name="AnimationManager" type="Node" parent="."]
script = ExtResource("8_86v2v")
